@@ -1,3 +1,7 @@
+2005-07-03  Miklos Szeredi <miklos@szeredi.hu>
+
+	* kernel: clean up 'direct_io' code
+
 2005-06-28  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Add 'mount.fuse' written by Petr Klima
